cleaned up code allowed for a url in the base folder. Updated everything accordingly.

--- a/nginx.conf
+++ b/nginx.conf
@@ -6,13 +6,22 @@ server {
         deny all;
     }
 
+    # Use if you want it on a subfolder
     location ~ (/i/|/o/) {
         # pass to uwsgi socket
         uwsgi_pass unix:///var/run/uwsgi-python/url/socket;
         # so we know if http/https
         uwsgi_param    UWSGI_SCHEME    $scheme;
-        # so we know where script is located
-        root /var/www/url;
+        # this file must exist!
+        include uwsgi_params;
+    }
+
+    # Use if you want it on the base domain 
+    location / {
+        # pass to uwsgi socket
+        uwsgi_pass unix:///var/run/uwsgi-python/url/socket;
+        # so we know if http/https
+        uwsgi_param    UWSGI_SCHEME    $scheme;
         # this file must exist!
         include uwsgi_params;
     }
