fixed a few things

--- a/nginx.conf
+++ b/nginx.conf
@@ -14,6 +14,8 @@ server {
         uwsgi_param    UWSGI_SCHEME    $scheme;
         # this file must exist!
         include uwsgi_params;
+        # so we know where url.db is
+        root /var/www/url;
     }
 
     # Use if you want it on the base domain 
@@ -24,5 +26,7 @@ server {
         uwsgi_param    UWSGI_SCHEME    $scheme;
         # this file must exist!
         include uwsgi_params;
+        # so we know where url.db is
+        root /var/www/url;
     }
 }
